[tool.poetry]
name = "streamlit-leaflet"
version = "0.1.0"
description = ""
authors = ["maarten-betman <maarten.betman@boskalis.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.79.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
